css word overflow fix

--- a/auction/static/auction/main.css
+++ b/auction/static/auction/main.css
@@ -15,15 +15,56 @@ body {
     /*background: #333138;*/
 }
 
+.error-box {
+    display: flex;
+    /*justify-content: center;*/
+    grid-column: 1/3;
+    /*border: 1px solid black;*/
+
+}
+
+.messages {
+list-style-type: none;
+}
+
 /* views rida 146 */
 .warning {
-    border-style: solid;
-    color: red;
+    margin: 5px 0px;
+    width: auto;
+    color: #cc0033;
+    font-size: 0.8em;
+    font-weight: bold;
+    line-height: 20px;
+    text-shadow: 1px 1px rgba(250,250,250,.3);
+    background-color: #fce4e4;
+    border: 1px solid #fcc2c3;
+    padding: 10px 30px;
+    border-radius: 5px;
+    animation-name: example;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
 }
 
 .success {
-    border-style: solid;
+    margin: 5px 0px;
+    width: auto;
     color: green;
+    font-size: 0.8em;
+    font-weight: bold;
+    line-height: 20px;
+    text-shadow: 1px 1px rgba(250,250,250,.3);
+    background-color: rgb(236, 255, 216);
+    border: 1px solid green;
+    padding: 10px 30px;
+    border-radius: 5px;
+    animation-name: example;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes example {
+0%   {opacity:0;}
+100%   {opacity:1;}
 }
 
 /* base.html */
@@ -561,7 +602,7 @@ footer {
 }
 
 .detail-pic-container img {
-    /*border-radius:10px;*/
+
 }
 
 .detail-pic-row {
@@ -587,7 +628,9 @@ footer {
 }
 
 .detail-info-container {
-    /*border: 1px solid red;*/
+    /* word-break: normal|break-all|keep-all|break-word|initial|inherit; */
+    word-break: break-word;
+    border: 1px solid red;
 }
 
 .detail-info-container h2 {
@@ -610,19 +653,12 @@ footer {
     margin-bottom: 20px;
 }
 
-.error-box {
-    display: grid;
-    grid-column: 1/3;
-    /*border: 1px solid black;*/
-}
-
 .clock {
     display: inline;
 }
 
 .not-active {
     /*border: 1px solid black;*/
-    padding: 10px;
 }
 
 /*--------------CREATE.html------------*/
@@ -662,7 +698,8 @@ textarea:focus {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     transform: scale(1.8);
     margin-left: 25vw;
-    font-size: 0.5rem;
+    font-size: 0.5em;
+    background:green;
 }
 
 
